samples/_failures_safe/1761199849_b49712_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a8d9463.c: In function ‘main’:
./samples/SAFE/__tmp_5a8d9463.c:167:12: error: missing terminating " character
  167 |     printf("Enter edges as 'from
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5a8d9463.c:167:5: error: expected expression at end of input
  167 |     printf("Enter edges as 'from
      |     ^~~~~~
./samples/SAFE/__tmp_5a8d9463.c:167:5: error: expected declaration or statement at end of input
